// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledRouterNavLink /> should match its empty snapshot 1`] = `
<NavLink
  activeClassName="active"
  className="sc-bdVaJa hciKHX"
  to="/"
/>
`;

exports[`<StyledRouterNavLink /> should match its snapshot when passed a "height" prop 1`] = `
<NavLink
  activeClassName="active"
  className="sc-bdVaJa dpbkTe"
  height="50px"
  to="/"
/>
`;
